# python-project-83

./: .env  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  parser.py  url_normalizer.py  url_repository.py
page_analyzer/templates/: base.html  index.html  page_not_found.html  url.html  urls.html
tests/: test_parser.py  test_url_normalizer.py
